Prep for release.

--- a/data/Exploratory Data Analysis.ipynb
+++ b/data/Exploratory Data Analysis.ipynb
@@ -1,11 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploratory Data Analysis\n",
+    "\n",
+    "Hypothesis testing and charting related to job satisfaction using Stack Overflow Developer Survey data from 2019."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sqlite3\n",
+    "\n",
     "import matplotlib\n",
     "import pandas\n",
     "import scipy.stats\n",
@@ -14,15 +25,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sqlite3.connect('source_data.sqlite')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Hypothesis 1: Some dev types are more satisfied than others. (Accepted)**"
+    "**Hypothesis 1: Some dev types are more satisfied than others. (accepted)**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +72,7 @@
        "Text(0, 0.5, '')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -84,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +135,7 @@
        "           493.01523399,   305.49558579,   827.57015599,  1317.85331563]]))"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,16 +162,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a23a509b0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a231c0828>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -174,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +323,7 @@
        "          2052.45680244,   726.84584478]]))"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,44 +336,133 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Hypothesis 3: Compensation and satisfaction are related.**"
+    "**Hypothesis 3: Compensation and satisfaction are related (accepted).**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "comp_and_satisfaction = pandas.read_csv('dev_type_comp_and_satisfaction.csv')"
+    "comp_satisfaction = pandas.read_sql(\n",
+    "    '''\n",
+    "    SELECT\n",
+    "      respondentId,\n",
+    "      compensation + 0.0 AS compensation,\n",
+    "      (\n",
+    "        CASE\n",
+    "          WHEN lower(jobSatisfaction) like '%neither%' THEN 0\n",
+    "          WHEN lower(jobSatisfaction) like '%dissatisfied%' THEN 1\n",
+    "          ELSE 0\n",
+    "        END\n",
+    "      ) AS isDissatisfied,\n",
+    "      (\n",
+    "        CASE\n",
+    "          WHEN lower(jobSatisfaction) like '%neither%' THEN 0\n",
+    "          WHEN lower(jobSatisfaction) like '%dissatisfied%'\n",
+    "          THEN 0\n",
+    "          ELSE 1\n",
+    "        END\n",
+    "      ) AS isSatisfied\n",
+    "    FROM\n",
+    "      source_data\n",
+    "    GROUP BY\n",
+    "        respondentId\n",
+    "    ''',\n",
+    "    conn\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comp_satisfaction_satisfied = comp_satisfaction[comp_satisfaction['isSatisfied'] == 1]\n",
+    "comp_satisfaction_dissatisfied = comp_satisfaction[comp_satisfaction['isDissatisfied'] == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "KendalltauResult(correlation=0.2133333333333333, pvalue=0.13498806168468172)"
+       "MannwhitneyuResult(statistic=199124986.0, pvalue=1.7577801970432773e-116)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scipy.stats.kendalltau(comp_and_satisfaction['compensation'], comp_and_satisfaction['satisfactionRatio'])"
+    "scipy.stats.mannwhitneyu(comp_satisfaction_satisfied['compensation'], comp_satisfaction_dissatisfied['compensation'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "135255.04410297883"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comp_satisfaction_satisfied['compensation'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "113558.5780081987"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comp_satisfaction_dissatisfied['compensation'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21696.46609478013"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comp_satisfaction_satisfied['compensation'].mean() - comp_satisfaction_dissatisfied['compensation'].mean()"
+   ]
   }
  ],
  "metadata": {
