--- a/data/Median Calculation.ipynb
+++ b/data/Median Calculation.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Median calculation\n",
+    "\n",
+    "Calculate median compensation for different disciplines via the Stack Overflow Developer Survey from 2019"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
